--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<link rel="icon" href="LOGO/LOGO.jpg" type="image/icon type">
+	<link rel="icon" href="LOGO/LOGO.jpg" type="icon">
 	<head>
 		<title>
 welcome to my portfolio</title>
